Migrated save exercise to AJAX. Fixed a missalignment with the close button for the note alert. Other minor front- and back -end changes

--- a/resources/assets/sass/dashboard.scss
+++ b/resources/assets/sass/dashboard.scss
@@ -389,6 +389,11 @@
   }
 }
 
+div.alert b.alert-header {
+  display: inline-block;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
 /* Settings */
 .settings-toggles {
   .form-group {
